--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -246,7 +246,7 @@
    #+begin_src emacs-lisp
      (setq
       use-short-answers t
-      debug-on-error nil
+      debug-on-error t
       create-lockfiles nil
       enable-recursive-minibuffers t
       ring-bell-function 'ignore
@@ -957,7 +957,7 @@
      #+begin_src emacs-lisp
        (use-package web-mode
          :ensure t
-         :mode ("\\.tsx\\'" "\\.css\\'" "\\.p?html?\\'")
+         :mode ("\\.css\\'" "\\.p?html?\\'")
          :custom
          (web-mode-markup-indent-offset 2)
          (web-mode-css-indent-offset 2)
@@ -970,18 +970,7 @@
          (web-mode-auto-close-style 2)
          (web-mode-tag-auto-close-style 2)
          (indent-tabs-mode nil)
-         (tab-width 2)
-         ;; :hook (web-mode-hook . (lambda ()
-         ;;                          (interactive)
-         ;;                          (when (string-equal "tsx" (file-name-extension buffer-file-name))
-         ;;                            (add-node-modules-path)
-         ;;                            (tide-setup)
-         ;;                            (flycheck-mode +1)
-         ;;                            (flycheck-add-mode 'javascript-eslint 'web-mode)
-         ;;                            (setq flycheck-checker 'javascript-eslint)
-         ;;                            (eldoc-mode +1)
-         ;;                            (tide-hl-identifier-mode +1))))
-         )
+         (tab-width 2))
      #+end_src
 *** typescript / JavaScript
 **** node module path
