--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1526,6 +1526,49 @@
       :custom
       (dired-dwim-target t)
       (dired-recursive-copies 'always))
+
+    (use-package dirvish
+      :ensure t
+      :init
+      (dirvish-override-dired-mode)
+      :custom
+      (dirvish-quick-access-entries ; It's a custom option, `setq' won't work
+       '(("h" "~/"                          "Home")
+         ("d" "~/Downloads/"                "Downloads")
+         ("b" "~/Nextcloud/book"            "Books")
+         ("t" "~/.local/share/Trash/files/" "TrashCan")))
+      :config
+      ;; (dirvish-peek-mode) ; Preview files in minibuffer
+      ;; (dirvish-side-follow-mode) ; similar to `treemacs-follow-mode'
+      (setq dirvish-mode-line-format
+            '(:left (sort symlink) :right (omit yank index)))
+      (setq dirvish-attributes
+            '(file-time file-size collapse subtree-state vc-state git-msg))
+      (setq dirvish-subtree-state-style 'nerd)
+      (setq delete-by-moving-to-trash t)
+      (setq dired-listing-switches
+            "-l --almost-all --human-readable --group-directories-first --no-group")
+      :bind ; Bind `dirvish|dirvish-side|dirvish-dwim' as you see fit
+      (("C-c f" . dirvish-fd)
+       ("C-x d" . dirvish)
+       :map dirvish-mode-map ; Dirvish inherits `dired-mode-map'
+       ("a"   . dirvish-quick-access)
+       ("f"   . dirvish-file-info-menu)
+       ("y"   . dirvish-yank-menu)
+       ("N"   . dirvish-narrow)
+       ("^"   . dirvish-history-last)
+       ("h"   . dirvish-history-jump) ; remapped `describe-mode'
+       ("s"   . dirvish-quicksort)    ; remapped `dired-sort-toggle-or-edit'
+       ("v"   . dirvish-vc-menu)      ; remapped `dired-view-file'
+       ("TAB" . dirvish-subtree-toggle)
+       ("M-f" . dirvish-history-go-forward)
+       ("M-b" . dirvish-history-go-backward)
+       ("M-l" . dirvish-ls-switches-menu)
+       ("M-m" . dirvish-mark-menu)
+       ("M-t" . dirvish-layout-toggle)
+       ("M-s" . dirvish-setup-menu)
+       ("M-e" . dirvish-emerge-menu)
+       ("M-j" . dirvish-fd-jump)))
   #+end_src
 * Browser
   #+begin_src emacs-lisp
@@ -1786,6 +1829,7 @@
        :config
        (pdf-tools-install)
        (setq-default pdf-view-display-size 'fit-page)
+       (setq pdf-view-incompatible-modes '(linum-mode linum-relative-mode helm-linum-relative-mode nlinum-mode nlinum-hl-mode nlinum-relative-mode yalinum-mode))
        (setq pdf-annot-activate-created-annotations t))
    #+end_src
 ** atomic-chrome
