--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1221,7 +1221,23 @@
            "Custom refile command that updates refile targets each time."
            (interactive)
            (vulpea-agenda-files-update)
-           (call-interactively 'org-refile)))
+           (call-interactively 'org-refile))
+
+         (defun update-org-agenda-buffer ()
+         "Update the *Org Agenda* buffer if it exists."
+         (when (get-buffer "*Org Agenda*")
+           (with-current-buffer "*Org Agenda*"
+             (let ((current-position (point)))
+               (org-agenda-redo)
+               (goto-char current-position)))))
+
+         (defun safe-update-org-agenda-buffer ()
+           "Safely update the *Org Agenda* buffer and handle any errors."
+           (condition-case err
+               (update-org-agenda-buffer)
+             (error (message "Error updating *Org Agenda*: %s" (error-message-string err)))))
+
+         (run-with-timer 0 60 'safe-update-org-agenda-buffer))
 
        (use-package org-capture
          :after (org org-agenda)
@@ -1299,7 +1315,7 @@
                                         :unnarrowed t)
                                        ))
          (org-roam-dailies-capture-templates  '(("j" "journal" entry
-                                                 "** %<%H:%M> %?"
+                                                 "** IN PROGRESS <%<%Y-%m-%d %a %H:%M>> %?"
                                                  :target (file+head+olp "%<%Y-%m>.org"
                                                                         "#+title: %<%Y-%m>\n"
                                                                         ("%<%Y-%m-%d %a>")))))
@@ -1578,8 +1594,8 @@
              ("o" . eww-browse-with-external-browser)
              ("r" . eww-reload)
              ("y" . eww-copy-page-down)
-             ("j" . pixel-scroll-up)
-             ("k" . pixel-scroll-down)
+             ("j" . scroll-up-line)
+             ("k" . scroll-down-line)
              ("g" . beginning-of-buffer)
              (";" . quit-window)
              ("G" . end-of-buffer))
