--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -304,8 +304,8 @@
    #+begin_src emacs-lisp
      (when (display-graphic-p)
        (if (eq system-type 'darwin)
-           (add-to-list 'default-frame-alist '(font . "PlemolJP-18"))
-         (add-to-list 'default-frame-alist '(font . "PlemolJP-21"))))
+           (add-to-list 'default-frame-alist '(font . "PlemolJP Console NF-18"))
+         (add-to-list 'default-frame-alist '(font . "PlemolJP Console NF-21"))))
 
      (use-package nerd-icons :ensure t)
 
