--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -516,7 +516,7 @@
      (use-package ddskk
        :ensure t
        :bind* ("C-j" . skk-kakutei)
-       :bind ("C-\\". skk-kakutei) ;; for ctrl-j from wezterm
+       :bind ("C-x @ j" . skk-kakutei) ;; for ctrl-j from wezterm
        :custom
        (default-input-method "japanese-skk")
        (skk-byte-compile-init-file t)
@@ -1746,7 +1746,7 @@
       :ensure t
       :hook (emacs-startup-hook . global-jinx-mode)
       :bind (("C-;" . jinx-correct)
-             ("C-]" . jinx-correct) ; for wezterm
+             ("C-x @ ;" . jinx-correct) ; for wezterm
              ("C-M-$" . jinx-languages)))
   #+end_src
 * External Collaboration
