--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -1795,6 +1795,15 @@
        :config
        (load (expand-file-name "personal_config/emacs_mail/imapnotify.d/prodigy.el" my:d:nextcloud)))
   #+end_src
+** openai
+   #+begin_src emacs-lisp
+     (use-package chatgpt-shell
+       :ensure t
+       :custom
+       ((chatgpt-shell-openai-key
+         (lambda ()
+           (plist-get (nth 0 (auth-source-search :app "openai" :max 1)) :api-key)))))
+   #+end_src
 ** Translate
    #+begin_src emacs-lisp
      (use-package go-translate
